--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,14 @@
         android:theme="@style/Theme.Places"
         tools:targetApi="31">
         <activity
+            android:name=".AddHappyPlaceActivity"
+            android:exported="false"
+
+            android:screenOrientation="portrait"
+            android:label="ADD HAPPY PLACE"
+            android:theme="@style/CustomToolBarStyle"
+            />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
