--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.karumi:dexter:6.2.3'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     
 }
