--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission
         android:name="android.permission.CAMERA"
         android:required="true"
@@ -19,6 +20,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Places"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/PlacesApiKey" />
+
+        <activity
+            android:name=".activities.MapActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/CustomActionBarTheme" />
         <activity
             android:name=".activities.PlaceDetailActivity"
             android:exported="false"
