--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'com.google.android.libraries.places:places:3.2.0'
+
+    implementation'com.google.android.gms:play-services-location:21.0.1'
+
+
+
     
 }
