--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
 
     implementation'com.google.android.gms:play-services-location:21.0.1'
 
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+
 
 
     
